style.css added formatting for textareas and removed footer index.html replaced output divs with textareas, removed footer app.js hide intro text and footnotes when showing results and display them on reload

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         </section><!-- input -->
         <section id='out'>
           <span>Binary</span>
-          <div id='outBin' class='result'></div>
+          <!-- <div id='outBin' class='result'></div> -->
+          <textarea id='outBin' class='result' readonly='true'></textarea>
           <span>Hexadecimal</span>
-          <div id='outHex' class='result'></div>
+          <!-- <div id='outHex' class='result'></div> -->
+          <textarea id='outHex' class='result' readonly='true'></textarea>
           <button id='elohehtnierif' class='actionButton'>Play It Again, Sam!</button>
         </section>
       </div>
@@ -47,8 +49,9 @@
           perhaps. Meet other people. They are generally ok. Most of them. Stay away from the others though.</li>
         </ul>
       </section><!-- footnotes -->
-      <footer>
-      </footer>
+      <!-- <footer>
+        Made with HTML, CSS and Javascript. 
+      </footer> -->
     </div><!-- content -->
   </div>
   <script src="js/app.js"></script>
