--- a/index.html
+++ b/index.html
@@ -18,40 +18,49 @@
       <h1>Text To Geek</h1>
     </header>
     <div id='content'>
-      <section class='pre'>
-        <p>
+      <section id='pageInput' class='page'>
+        <section class='pre'>
+          <p>
           Ever wanted to impress the people in your IT department with your geekieness? Ever wondered how it 
           must feel to be a nerd person every normal computer user looks up to in awe? Look no further, this 
           is your best shot at gaining some bonus points on the nerd scale. No CS 101 required. With the click
           of a few buttons you'll be ready to copy and paste your new and much improved email signature, send a
           tweet no one understands<sup>1</sup> or impress your friends<sup>2</sup>.
-        </p>
-      </section><!-- pre -->
-      <div id='main'>
+          </p>
+        </section><!-- pre -->
         <section id='in'>
           <textarea placeholder="Type here." rows="8" cols="50"></textarea>
           <button id='fireinthehole' class='actionButton'>Geekify Me!</button>
-        </section><!-- input -->
-        <section id='out'>
-          <span>Binary</span>
-          <!-- <div id='outBin' class='result'></div> -->
-          <textarea id='outBin' class='result' readonly='true'></textarea>
+        </section><!-- input -->        
+        <section class='fn'>
+          <ul>
+            <li><sup>1</sup> And thus you must obviously be awesome.</li>
+            <li><sup>2</sup> If you don't have friends then most likely you don't need this tool. Try to go out a bit more
+            perhaps. Meet other people. They are generally ok. Most of them. Stay away from the others though.</li>
+          </ul>
+        </section><!-- footnotes -->
+      </section><!-- pageInput -->
+
+      <section id='pageResult' class='page'>
+        <section class='pre'>
+          Here is your geekified self. Enjoy. Send your friends so you can all bask in the glory of your binary and
+          hexadecimal beings.
+        </section><!-- pre -->
+        <section class='out'>
+          <span>Binary</span>            
+          <textarea id='outBin' class='result' readonly='true' rows="8" cols="50"></textarea>
           <span>Hexadecimal</span>
-          <!-- <div id='outHex' class='result'></div> -->
-          <textarea id='outHex' class='result' readonly='true'></textarea>
+          <textarea id='outHex' class='result' readonly='true' rows="8" cols="50"></textarea>
           <button id='elohehtnierif' class='actionButton'>Play It Again, Sam!</button>
         </section>
-      </div>
-      <section class='fn'>
-        <ul>
-          <li><sup>1</sup> And thus you must obviously be awesome.</li>
-          <li><sup>2</sup> If you don't have friends then most likely you don't need this tool. Try to go out a bit more
-          perhaps. Meet other people. They are generally ok. Most of them. Stay away from the others though.</li>
-        </ul>
-      </section><!-- footnotes -->
-      <!-- <footer>
-        Made with HTML, CSS and Javascript. 
-      </footer> -->
+        <section class='fn'>
+          <ul>
+            <li><sup>1</sup> And thus you must obviously be awesome.</li>
+            <li><sup>2</sup> If you don't have friends then most likely you don't need this tool. Try to go out a bit more
+            perhaps. Meet other people. They are generally ok. Most of them. Stay away from the others though.</li>
+          </ul>
+        </section><!-- footnotes -->
+      </section><!-- pageResult -->
     </div><!-- content -->
   </div>
   <script src="js/app.js"></script>
